--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -18,9 +18,14 @@ jobs:
         with:
           filename: general.svg
           token: ${{ secrets.METRICS_TOKEN }}
-          base: header
+          base: header, activity, community, repositories, metadata
           base_indepth: yes
-          config_order: base.header, isocalendar, languages, notable, discussions, topics
+      - name: Languages
+        if: ${{ success() || failure() }}
+        uses: lowlighter/metrics@latest
+        with:
+          filename: languages.svg
+          token: ${{ secrets.METRICS_TOKEN }}
           plugin_languages: yes
           plugin_languages_ignored: html, css
           plugin_languages_details: lines, bytes-size, percentage
