--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -26,6 +26,7 @@ jobs:
         with:
           filename: languages.svg
           token: ${{ secrets.METRICS_TOKEN }}
+          base: ""
           plugin_languages: yes
           plugin_languages_ignored: html, css
           plugin_languages_details: lines, bytes-size, percentage
